tests/ui/const-generics/generic_arg_infer/issue-91614.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-91614.rs:6:13
   |
LL |     let y = Mask::<_, _>::splat(false);
   |             ^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the struct `Mask`
   |
   = note: cannot satisfy `_: MaskElement`
   = help: the following types implement trait `MaskElement`:
             isize
             i8
             i16
             i32
             i64
note: required by a bound in `Mask::<T, N>::splat`
  --> $SRC_DIR/core/src/../../portable-simd/crates/core_simd/src/masks.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
